--- a/My_Grades/app/src/main/res/layout/grade_information_input_layout.xml
+++ b/My_Grades/app/src/main/res/layout/grade_information_input_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
@@ -8,7 +8,319 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/linearLayout"
+        android:weightSum="1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:inputType="text"
+            android:hint="Assignment"
+            android:textAlignment="gravity"
+            android:id="@+id/course_name_input"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:lines="3"
+            android:maxLines="1"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="15dp"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="20dp"
+            android:layout_gravity="top"
+            android:layout_weight="0.75"
+            android:hapticFeedbackEnabled="true" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="62dp"
+            android:hint="% Grade"
+            android:id="@+id/course_hours_input"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:lines="2"
+            android:maxLines="1"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:textAlignment="center"
+            android:layout_gravity="top"
+            android:layout_marginBottom="15dp"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="20dp"
+            android:layout_weight="0.38"
+            android:inputType="numberSigned|numberDecimal" />
+
+    </LinearLayout>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/course_input_submit_button"
+        android:src="@drawable/plus_26"
+        android:onClick="send_course_info"
+        android:layout_alignTop="@+id/course_info_input_section"
+        android:layout_alignRight="@+id/trash_button_4"
+        android:layout_alignEnd="@+id/trash_button_4"
+        android:layout_alignBottom="@+id/linearLayout2" />
+
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/course_information_grid_layout"
+        android:columnCount="3"
+        android:rowCount="6"
+        android:orientation="horizontal"
+        android:padding="15dp"
+        android:background="#ed9f9f"
+        android:layout_below="@+id/linearLayout">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Assignment"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_marginRight="35dp"
+            android:layout_marginBottom="30dp"
+            android:layout_gravity="left" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="% Grade"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:layout_marginRight="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="30dp"
+            android:visibility="invisible" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:visibility="invisible"
+            android:textAlignment="center"
+            android:layout_marginRight="10dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:id="@+id/textView3"
+            android:textAlignment="center"
+            android:layout_marginRight="10dp"
+            android:visibility="invisible" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView4"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:visibility="invisible"
+            android:layout_marginRight="35dp"
+            android:layout_marginBottom="30dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView5"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:visibility="invisible"
+            android:layout_marginRight="10dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:id="@+id/textView6"
+            android:visibility="invisible"
+            android:layout_marginRight="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView7"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_marginRight="35dp"
+            android:visibility="invisible"
+            android:layout_marginBottom="30dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView8"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:visibility="invisible"
+            android:layout_marginRight="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:visibility="invisible"
+            android:id="@+id/textView9"
+            android:layout_marginRight="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView10"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_marginRight="35dp"
+            android:visibility="invisible"
+            android:layout_marginBottom="30dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView11"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:visibility="invisible"
+            android:layout_marginRight="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:visibility="invisible"
+            android:id="@+id/textView12"
+            android:layout_marginRight="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView13"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_marginRight="35dp"
+            android:visibility="invisible"
+            android:layout_marginBottom="30dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView14"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:visibility="invisible"
+            android:layout_marginRight="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:id="@+id/textView15"
+            android:layout_marginRight="20dp"
+            android:visibility="invisible" />
+    </GridLayout>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/trash_button_5"
+        android:clickable="true"
+        android:foregroundGravity="left"
+        android:src="@drawable/trash"
+        android:cropToPadding="false"
+        android:textAlignment="gravity"
+        android:onClick="remove_row_1"
+        android:layout_below="@+id/trash_button_4"
+        android:layout_alignLeft="@+id/trash_button_4"
+        android:layout_alignStart="@+id/trash_button_4" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/trash_button_1"
+        android:clickable="true"
+        android:src="@drawable/trash"
+        android:onClick="remove_row_2"
+        android:layout_marginTop="29dp"
+        android:layout_alignTop="@+id/course_information_grid_layout"
+        android:layout_toRightOf="@+id/course_information_grid_layout"
+        android:layout_toEndOf="@+id/course_information_grid_layout"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/trash_button_2"
+        android:clickable="true"
+        android:src="@drawable/trash"
+        android:onClick="remove_row_3"
+        android:layout_below="@+id/trash_button_1"
+        android:layout_alignLeft="@+id/trash_button_1"
+        android:layout_alignStart="@+id/trash_button_1"
+        android:layout_marginTop="14dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/trash_button_3"
+        android:clickable="true"
+        android:src="@drawable/trash"
+        android:onClick="remove_row_4"
+        android:layout_centerVertical="true"
+        android:layout_alignLeft="@+id/trash_button_2"
+        android:layout_alignStart="@+id/trash_button_2" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/trash_button_4"
+        android:clickable="true"
+        android:src="@drawable/trash"
+        android:onClick="remove_row_5"
+        android:layout_below="@+id/trash_button_3"
+        android:layout_alignLeft="@+id/trash_button_3"
+        android:layout_alignStart="@+id/trash_button_3"
+        android:layout_marginTop="17dp" />
+
+    <ImageButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:onClick="save_course_data"
+        android:src="@drawable/save_26"
+        android:layout_below="@+id/course_information_grid_layout"
+        android:layout_alignLeft="@+id/course_information_grid_layout"
+        android:layout_alignStart="@+id/course_information_grid_layout"
+        android:layout_marginTop="26dp" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/linearLayout2">
 
         <TextView
             android:layout_width="match_parent"
@@ -18,4 +330,4 @@
             android:padding="10dp"
             android:id="@+id/grade_information_input_text_view"/>
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
