--- a/My_Grades/app/src/main/res/layout/display_gpa_functions_layout.xml
+++ b/My_Grades/app/src/main/res/layout/display_gpa_functions_layout.xml
@@ -5,6 +5,14 @@
     android:orientation="vertical"
     android:gravity="center">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Semester GPA:"
+        android:id="@+id/textView16"
+        android:layout_gravity="center_horizontal" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
